# wallabag-api

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  wallabag-cli-conf.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  reuse.yml
examples/: check_exists.rs  example-sandbox.rs  get_entries.rs  get_entries_page.rs  save_url.rs  wallabag-cli.toml
src/: client.rs  errors.rs  lib.rs  types.rs  utils.rs
src/types/: annotations.rs  common.rs  entries_filter.rs  entry.rs  format.rs  new_entry.rs  patch_entry.rs  query.rs  tags.rs  user.rs
src/utils/: serde.rs
wallabag-api/: Cargo.toml  README.md
wallabag-api/examples/: check_exists.rs  example-auth.rs  example-sandbox.rs  get_entries.rs  save_url.rs
wallabag-api/src/: client.rs  errors.rs  lib.rs  types.rs  utils.rs
wallabag-api/src/types/: annotations.rs  common.rs  entries_filter.rs  entry.rs  format.rs  new_entry.rs  patch_entry.rs  tags.rs  user.rs
wallabag-api/src/utils/: serde.rs
wallabag-backend/: Cargo.toml  README.md
wallabag-backend/sql/: down.sql  up.sql
wallabag-backend/src/: db.rs  lib.rs
wallabag-cli/: Cargo.toml  Makefile  README.md  diesel.toml
wallabag-cli/migrations/create_tables/: down.sql  up.sql
wallabag-cli/sql/: up.sql
wallabag-cli/src/: backend.rs  main.rs  schema.rs
wallabag-cli/src/backend/: db.rs
wallabag-cli/src/sql/: up-sqlite.sql
wallabag-gtk/: Cargo.toml  README.md
wallabag-gtk/src/: main.rs
wallabag-tui/: Cargo.toml  README.md  example-config.toml
wallabag-tui/src/: backend.rs  event.rs  main.rs
