[package]
name = "wallabag-api"
edition = "2018"
version = "0.3.0"
authors = ["Samuel Walladge <samuel@swalladge.net>"]
license = "MIT OR Apache-2.0"
description = "Client API library for Wallabag"
repository = "https://github.com/swalladge/wallabag-api"
keywords = ["api", "wallabag"]
categories = ["api-bindings"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
log = "0.4.6"
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.33"
surf = "2.0.0-alpha.0"
serde_urlencoded = "0.6.1"

[dev-dependencies]
async-std = "1.5.0"
