# Copyright 2018 Samuel Walladge <samuel@swalladge.net>
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "wallabag-api"
edition = "2018"
version = "0.4.2"
authors = ["Casper Meijn <casper@meijn.net>", "Samuel Walladge <samuel@swalladge.net>"]
license = "MIT OR Apache-2.0"
description = "Client API library for Wallabag"
repository = "https://github.com/caspermeijn/wallabag-api"
keywords = ["api", "wallabag"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
surf = "2.2.0"
serde_urlencoded = "0.7.0"

[dev-dependencies]
async-std = "1.9.0"
