[package]
name = "wallabag-backend"
edition = "2018"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
license = "MIT OR Apache-2.0"
description = "Shared backend for Wallabag client apps"
repository = "https://github.com/swalladge/wallabag-rs"
keywords = ["wallabag"]
maintenance = { status = "experimental" }

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.3"
log = "0.4.6"
reqwest = "0.9.5"
rusqlite = "0.15.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"

wallabag-api = { path = "../wallabag-api" }
