[package]
name = "wallabag-cli"
edition = "2018"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
license = "MIT OR Apache-2.0"
description = "Command line client for Wallabag"
repository = "https://github.com/swalladge/wallabag-rs"
keywords = ["cli", "wallabag"]
categories = ["command-line-interface"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
structopt = "0.2.14"
chrono = "0.4.6"
failure = "0.1.3"
log = "0.4.6"
serde = "1.0.82"
serde_derive = "1.0.82"
simplelog = "0.5.3"
toml = "0.4.10"

wallabag-api = { path = "../wallabag-api" }
wallabag-backend = { path = "../wallabag-backend" }
