[package]
name = "wallabag-cli"
edition = "2018"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
license = "MIT OR Apache-2.0"
description = "Command line client for Wallabag"
repository = "https://github.com/swalladge/wallabag-rs"
keywords = ["cli", "wallabag"]
categories = ["command-line-interface"]
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
chrono = "0.4.6"
failure = "0.1.3"
html2text = "0.1.8"
log = "0.4.6"
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.33"
simplelog = "0.5.3"
structopt = "0.2.14"
toml = "0.4.10"

wallabag-backend = { version = "0.1.0", path = "../wallabag-backend" }
