[package]
name = "wallabag-gtk"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# remove when ready to release
publish = false

[dependencies]
chrono = "0.4.6"
failure = "0.1.3"
gtk = "0.5.0"
log = "0.4.6"
relm = "0.15.0"
relm-attributes = "0.15.0"
relm-derive = "0.15.0"
serde = { version = "1.0.82", features = ["derive"] }
simplelog = "0.5.3"
structopt = "0.2.14"
toml = "0.4.10"
webkit2gtk = "0.5.1"

wallabag-backend = { version = "0.1.0", path = "../wallabag-backend" }
