[package]
name = "wallabag-tui"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# remove when ready to release
publish = false


[dependencies]
structopt = "0.2.14"
failure = "0.1.3"
log = "0.4.6"
serde = { version = "1.0.82", features = ["derive"] }
simplelog = "0.5.3"
termion = "1.5.1"
tui = "0.3.0"
toml = "0.4.10"

wallabag-api = { version = "0.1.0", path = "../wallabag-api" }
wallabag-backend = { version = "0.1.0", path = "../wallabag-backend" }
